<resources>
    <string name="app_name">Score Keeper</string>
    <string name="action_settings">Settings</string>
    <string name="goal">GOAL</string>
    <string name="team_a_goals">Team A Goals</string>
    <string name="team_b_goals">Team B Goals</string>
    <string name="corner">Corner</string>
    <string name="team_b_corner">Team B Corner</string>
    <string name="cards">Cards</string>
    <string name="red_card_button">RED CARD</string>
    <string name="yellow_card_button">YELLOW CARD</string>
    <string name="cornet_button">CORNER</string>
    <string name="button_reset">RESET</string>
</resources>
