<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ball_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/team_a_goals"
                        android:textColor="#616161"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/team_a_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:paddingBottom="4dp"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="50sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/red"
                                android:fontFamily="sans-serif-medium"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/cards"
                                android:textColor="#616161"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/team_a_red_card"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-light"
                                android:gravity="center"
                                android:paddingBottom="6dp"
                                android:text="0"
                                android:textColor="#000000"
                                android:textSize="26sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/yellow"
                                android:fontFamily="sans-serif-medium"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/cards"
                                android:textColor="#616161"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/team_a_yellow_card"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-light"
                                android:gravity="center"
                                android:paddingBottom="6dp"
                                android:text="0"
                                android:textColor="#000000"
                                android:textSize="26sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/blue"
                                android:fontFamily="sans-serif-medium"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/corner"
                                android:textColor="#616161"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/team_a_corner"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-light"
                                android:gravity="center"
                                android:paddingBottom="6dp"
                                android:text="0"
                                android:textColor="#000000"
                                android:textSize="26sp" />
                        </LinearLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/button_red_card_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:text="@string/red_card_button" />

                    <Button
                        android:id="@+id/button_yellow_card_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:text="@string/yellow_card_button" />

                    <Button
                        android:id="@+id/button_corner_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:text="@string/cornet_button" />

                    <Button
                        android:id="@+id/button_goal_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:text="@string/goal" />
                </LinearLayout>

                <View
                    android:id="@+id/center_line"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/team_b_goals"
                        android:textColor="#616161"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/team_b_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:paddingBottom="4dp"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="50sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/red"
                                android:fontFamily="sans-serif-medium"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/cards"
                                android:textColor="#616161"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/team_b_red_card"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-light"
                                android:gravity="center"
                                android:paddingBottom="6dp"
                                android:text="0"
                                android:textColor="#000000"
                                android:textSize="26sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/yellow"
                                android:fontFamily="sans-serif-medium"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/cards"
                                android:textColor="#616161"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/team_b_yellow_card"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-light"
                                android:gravity="center"
                                android:paddingBottom="6dp"
                                android:text="0"
                                android:textColor="#000000"
                                android:textSize="26sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/blue"
                                android:fontFamily="sans-serif-medium"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/corner"
                                android:textColor="#616161"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/team_b_corner"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-light"
                                android:gravity="center"
                                android:paddingBottom="6dp"
                                android:text="0"
                                android:textColor="#000000"
                                android:textSize="26sp" />
                        </LinearLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/button_red_card_b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:text="@string/red_card_button" />

                    <Button
                        android:id="@+id/button_yellow_card_b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:text="@string/yellow_card_button" />

                    <Button
                        android:id="@+id/button_corner_b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:text="@string/cornet_button" />

                    <Button
                        android:id="@+id/button_goal_b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="22dp"
                        android:layout_marginRight="22dp"
                        android:text="@string/goal" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/button_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_reset" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
